Tentativa de testes

--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -10,7 +10,7 @@
                     
                     <div class="form-group">
                         <label for="txtnome">Nome</label>
-                        <input type="text" class="form-control" id="txtnome" placeholder="Nome" th:field="*{name}" >
+                        <input type="text" class="form-control" id="txtname" placeholder="Nome" th:field="*{name}" required>
                     </div>
                     <div class="form-group">
                         <label for="txttype">Ocupacao</label>
@@ -18,11 +18,11 @@
                     </div>                    
                     <div class="form-group">
                         <label for="txtemail">Email</label>
-                        <input type="text" class="form-control" id="txtemail" placeholder="Email" th:field="*{email}" >
+                        <input type="text" class="form-control" id="txtemail" placeholder="Email" th:field="*{email}" required>
                     </div>
                     <div class="form-group">
                         <label for="txtphone">Telefone</label>
-                        <input type="text" class="form-control" id="txtphone" placeholder="Telefone" th:field="*{phone}">
+                        <input type="text" class="form-control" id="txtphone" placeholder="Telefone" th:field="*{phone}" required>
                     </div>
                     <div class="form-group">
                         <label for="txtaddress">Endereco</label>
@@ -34,9 +34,8 @@
                             <option th:each="city : ${listcity}" th:value="${city.id}" th:text="${city.name}"></option>
                         </select>
                     </div>
-                    <div class="form-group">
-                    
-                    <label for="slcEnabledUser">Usuario ativo</label><br>
+                    <div class="form-group">                    
+                    <label for="slcEnabledUser">Usuario ativo?</label><br>
                     <input type="checkbox" name="userEnabled" th:field="*{enabled}">Ativo<br>
                     </div>
                                         
