adicionado o sql e os respectivos arquivos do relatorio

--- a/src/main/resources/templates/report/choose-report-type.html
+++ b/src/main/resources/templates/report/choose-report-type.html
@@ -13,7 +13,7 @@
 	        <hr>
 	        <a href="user-report.html" th:href="@{/report/institution}" class="btn btn-primary btn-lg" role="button">Criar relatório de instituição</a>
 	        <hr>
-            <a href="accessory-report.html" th:href="@{/report/accessory}" class="btn btn-primary btn-lg" role="button">Criar relatório de número de peças por tipo de acessório</a>
+            <a href="accessory-report.html" th:href="@{/report/orderCategory}" class="btn btn-primary btn-lg" role="button">Criar relatório de número de peças por tipo de acessório</a>
 	        <div th:include="layout :: footer" id="footer">(footer)</div>
 	    </div>
     </body>
