Finalização do método

--- a/src/main/resources/templates/report/user-report.html
+++ b/src/main/resources/templates/report/user-report.html
@@ -26,6 +26,20 @@
 				</div>
 			  </div>
 			  
+			  <div class="form-group">
+					<label for="orderOption" class="col col-form-label">Ordernação do campo nome</label>
+      					<div class="col">
+      						<div id="orderOption" class="btn-group btn-group-toggle" data-toggle="buttons">
+							<label class="btn btn-secondary active">
+								<input type="radio" name="orderByDesc" value="false" checked> Crescente
+							</label>
+							<label class="btn btn-secondary">
+								<input type="radio" name="orderByDesc" value="true"> Decrescente
+							</label>
+      						</div>
+      					</div>
+     		  </div>
+       			
 		  	  <small class="form-text text-muted">Deixe em branco os campos com pelo os quais não queira filtrar.</small>
 			
 			  </br>
