--- a/src/main/resources/templates/catalog/accessoryList.html
+++ b/src/main/resources/templates/catalog/accessoryList.html
@@ -6,10 +6,14 @@
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<img src="/image/logoColab.jpg" class="logo">
-			<div class="collapse navbar-collapse" id="navbarNav">
+			<div class="container-fluid" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item active"></li>
 					<li class="navbar-brand">Catálogo de Acessórios</li>
+					
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></li>
 				</ul>
 			</div>
 		</nav>
@@ -28,7 +32,7 @@
 						<div class="card-body">
 							<h5 class="card-title" th:text="${umpac.assistiveAccessory.name}"></h5>
 							<p class="card-text" th:text="${umpac.assistiveAccessory.description}"></p>
-							<a href="#" class="btn btn-primary">Mais</a>
+							<a href="#" class="btn btn-success">Adicionar</a>
 						</div>
 					</div>
 				</div>
