--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,11 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:fragment="htmlhead">
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}" />
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
     	<link rel="stylesheet" th:href="@{/css/accessoryList.css}" />
     </head>
     <body>
-        <nav th:fragment="menu" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    	<nav th:fragment="menu" class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/">Projeto Colab</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -19,13 +20,9 @@
                   <li class="nav-item active">
                     <a class="nav-link" href="/report">Relatórios</a>
                   </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="/category">Categoria</a>
-                  </li>
                 </ul>
             </div>
         </nav>
-         
         <div th:fragment="footer" id="footer">
             <script th:src="@{/webjars/jquery/3.0.0/jquery.min.js}"></script>
             <script th:src="@{/webjars/bootstrap/4.0.0/js/bootstrap.min.js}"></script>
