--- a/src/main/resources/templates/assistiveaccessory/form.html
+++ b/src/main/resources/templates/assistiveaccessory/form.html
@@ -3,29 +3,29 @@
 	<meta charset="UTF-8">
     <head th:include="layout :: htmlhead"></head>
     <body>
-        <div class="container">
+        <div class="assistive-accessory-container">
             <nav th:replace="layout :: menu">(menu)</nav>
-            <div class="border border-dark">
+            <div class="border border-dark assistive-accessory-border">
             <form th:action="@{/assistiveaccessory/savenew/(form)}" th:object="${assistiveaccessory}" action="#" method="post">
                     <input type="hidden" id="txtid" th:field="*{id}" />    
                     
-                    <div class="form-group">
+                    <div class="form-group assistive-accessory-group">
                         <label for="txtname">Nome</label>
                         <input type="text" class="form-control" id="txtname" placeholder="Nome" th:field="*{name}" >
                     </div>
-                    <div class="form-group">
+                    <div class="form-group assistive-accessory-group">
                         <label for="txtdescription">Descrição</label>
                         <input type="text" class="form-control" id="txtdescription" placeholder="Descrição" th:field="*{description}" >
                     </div>
-                    <div class="form-group">
+                    <div class="form-group assistive-accessory-group">
                         <label for="txtprescription">Prescrição</label>
                         <input type="text" class="form-control" id="txtprescription" placeholder="Prescrição" th:field="*{prescription}">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group assistive-accessory-group">
                         <label for="txtfunction">Função</label>
                         <input type="text" class="form-control" id="txtfunction" placeholder="Função" th:field="*{function}">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group assistive-accessory-group">
                         <label for="txtcode">Código</label>
                         <input type="text" class="form-control" id="txtcode" placeholder="Código" th:field="*{code}">
                     </div>
