--- a/src/main/resources/templates/assistiveaccessory/form.html
+++ b/src/main/resources/templates/assistiveaccessory/form.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
     <head th:include="layout :: htmlhead"></head>
     <body>
-        <div class="assistive-accessory-container">
+        <div class="container assistive-accessory-container">
             <nav th:replace="layout :: menu">(menu)</nav>
             <div class="border border-dark assistive-accessory-border">
             <form th:action="@{/assistiveaccessory/savenew/(form)}" th:object="${assistiveaccessory}" action="#" method="post">
@@ -11,25 +11,25 @@
                     
                     <div class="form-group assistive-accessory-group">
                         <label for="txtname">Nome</label>
-                        <input type="text" class="form-control" id="txtname" placeholder="Nome" th:field="*{name}" >
+                        <input type="text" class="form-control" id="txtname" placeholder="Insere o nome do acessório assistivo" th:field="*{name}" >
                     </div>
                     <div class="form-group assistive-accessory-group">
                         <label for="txtdescription">Descrição</label>
-                        <input type="text" class="form-control" id="txtdescription" placeholder="Descrição" th:field="*{description}" >
+                        <input type="text" class="form-control" id="txtdescription" placeholder="Insere a descrição do acessório assistivo" th:field="*{description}" >
                     </div>
                     <div class="form-group assistive-accessory-group">
                         <label for="txtprescription">Prescrição</label>
-                        <input type="text" class="form-control" id="txtprescription" placeholder="Prescrição" th:field="*{prescription}">
+                        <input type="text" class="form-control" id="txtprescription" placeholder="Insere a prescrição do acessório assistivo" th:field="*{prescription}">
                     </div>
                     <div class="form-group assistive-accessory-group">
                         <label for="txtfunction">Função</label>
-                        <input type="text" class="form-control" id="txtfunction" placeholder="Função" th:field="*{function}">
+                        <input type="text" class="form-control" id="txtfunction" placeholder="Insere a função do acessório assistivo" th:field="*{function}">
                     </div>
                     <div class="form-group assistive-accessory-group">
                         <label for="txtcode">Código</label>
-                        <input type="text" class="form-control" id="txtcode" placeholder="Código" th:field="*{code}">
+                        <input type="text" class="form-control" id="txtcode" placeholder="Insere o código do acessório assistivo" th:field="*{code}">
                     </div>
-                    <button type="submit" class="btn btn-primary">Enviar</button>
+                    <button type="submit" class="btn btn-primary assistive-accessory-btn">Enviar</button>
                 </form>
             </div>
         </div>
