--- a/src/main/resources/templates/assistiveaccessory/form.html
+++ b/src/main/resources/templates/assistiveaccessory/form.html
@@ -7,7 +7,7 @@
             <nav th:replace="layout :: menu">(menu)</nav>
             <div class="border border-dark assistive-accessory-border">
             <form th:action="@{/assistiveaccessory/savenew/(form)}" th:object="${assistiveaccessory}" action="#" method="post">
-                    <input type="hidden" id="txtid" th:field="*{id}" />    
+                    <input type="hidden" id="id" th:field="*{id}" />    
                     
                     <div class="form-group assistive-accessory-group">
                         <label for="txtname">Nome</label>
@@ -28,6 +28,12 @@
                     <div class="form-group assistive-accessory-group">
                         <label for="txtcode">Código</label>
                         <input type="text" class="form-control" id="txtcode" placeholder="Insere o código do acessório assistivo" th:field="*{code}">
+                    </div>
+                    <div class="form-group">
+                        <label for="slccategory">Categoria</label>
+                        <select class="form-control" id="slccategory" th:field="*{category}">
+                            <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+                        </select>
                     </div>
                     <button type="submit" class="btn btn-primary assistive-accessory-btn">Enviar</button>
                 </form>
