--- a/src/main/resources/templates/assistiveaccessory/form.html
+++ b/src/main/resources/templates/assistiveaccessory/form.html
@@ -6,7 +6,7 @@
         <div class="container assistive-accessory-container">
             <nav th:replace="layout :: menu">(menu)</nav>
             <div class="border border-dark assistive-accessory-border">
-            <form th:action="@{/assistiveaccessory/savenew/(form)}" th:object="${assistiveaccessory}" action="#" method="post">
+            <form th:action="@{/assistiveaccessory/new/(form)}" th:object="${assistiveaccessory}" action="#" method="post">
                     <input type="hidden" id="id" th:field="*{id}" />    
                     
                     <div class="form-group assistive-accessory-group">
@@ -35,9 +35,13 @@
                             <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
                         </select>
                     </div>
+                    <div class="form-group assistive-accessory-group">
+                        <label for="imgUpload">Imagem</label>
+                        <input id="imgUpload" type="file" name="accessoryImage" />
+                    </div>
                     <button type="submit" class="btn btn-primary assistive-accessory-btn">Enviar</button>
                 </form>
-            </div>
+		</div>
         </div>
         <div th:include="layout :: footer" id="footer">(footer)</div>
     </body>
