--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,6 +22,9 @@
                   <li class="nav-item active">
                     <a class="nav-link" href="/category">Categoria</a>
                   </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/accessorycolor">Cadastro de Cores</a>
+                  </li>
                 </ul>
             </div>
         </nav>
