--- a/src/main/resources/templates/assistiveaccessory/form.html
+++ b/src/main/resources/templates/assistiveaccessory/form.html
@@ -6,7 +6,7 @@
         <div class="container assistive-accessory-container">
             <nav th:replace="layout :: menu">(menu)</nav>
             <div class="border border-dark assistive-accessory-border">
-            <form th:action="@{/assistiveaccessory/savenew/(form)}" th:object="${assistiveaccessory}" action="#" method="post">
+            <form th:action="@{/assistiveaccessory/new/(form)}" th:object="${assistiveaccessory}" action="#" method="post">
                     <input type="hidden" id="id" th:field="*{id}" />    
                     
                     <div class="form-group assistive-accessory-group">
@@ -33,6 +33,18 @@
                         <label for="slccategory">Categoria</label>
                         <select class="form-control" id="slccategory" th:field="*{category}">
                             <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="slccolor">Cores</label>
+                        <select class="form-control" id="slccolor" th:field="*{colorList}" multiple="true">
+                            <option th:each="color : ${colors}" th:value="${color.id}" th:text="${color.name}"></option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="slccolor">Tamanhos</label>
+                        <select class="form-control" id="slccolor" th:field="*{sizeList}" multiple="true">
+                            <option th:each="size : ${sizes}" th:value="${size.id}" th:text="${size.name}"></option>
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary assistive-accessory-btn">Enviar</button>
