--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="/category">Categoria</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="/accessorycolor">Cadastro de Cores</a>
+                    <a class="nav-link" href="/accessorycolor">Cores</a>
                   </li>
                 </ul>
             </div>
