--- a/src/main/resources/templates/institution/form.html
+++ b/src/main/resources/templates/institution/form.html
@@ -5,7 +5,7 @@
         <div class="container">
             <nav th:replace="layout :: menu">(menu)</nav>
             <div class="border border-dark">
-                  <form th:action="@{/Institution/(form)}" th:object="${institution}" action="#" method="post">
+                  <form th:action="@{/institution/(form)}" th:object="${institution}" action="#" method="post">
                     <input type="hidden" id="txtid" th:field="*{id}" />
                     <div class="form-group">
                         <label for="txtnome">Nome Instituicao</label>
