--- a/src/main/resources/templates/myList/myList.html
+++ b/src/main/resources/templates/myList/myList.html
@@ -28,19 +28,19 @@
 			  	</thead>
 			  	<tbody>
 			    	<tr>
-			      		<td><img class="card-img-top" src="/image/item.png" alt="Card image cap"></td>
+			      		<td><img src="/image/item.png" alt="Card image cap"></td>
 			      		<td>Produto top de linha 1</td>
 			     		<td><span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span></td>
 			    	</tr>
 		
 			    	<tr>	      
-			      		<td><img class="card-img-top" src="/image/item.png" alt="Card image cap"></td>
+			      		<td><img src="/image/item.png" alt="Card image cap"></td>
 			      		<td>Produto top de linha 2</td>
 			      		<td><span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span></td>
 			    	</tr>
 			    
 			    	<tr>
-			      		<td><img class="card-img-top" src="/image/item.png" alt="Card image cap"></td>
+			      		<td><img src="/image/item.png" alt="Card image cap"></td>
 			      		<td>Produto top de linha 3</td>
 			      		<td><span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span></td>
 			    	</tr>
