--- a/src/main/resources/templates/catalog/accessoryList.html
+++ b/src/main/resources/templates/catalog/accessoryList.html
@@ -13,29 +13,28 @@
 					
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></li>
+					<li><a href="/MyList"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a></li>
 				</ul>
 			</div>
 		</nav>
 
-		<div class="container">
-			<div class="row">
-				<div class="card-banner" align="center">
-					<h2>Alimentação</h2>
+		<div class="container">			
+			<div class="container"th:each="umpac : ${listAccessory}">
+				<div class="row" th:if="${umpac.first}">
+					<div class="card-banner" align="center">
+						<h2 th:text="${umpac.assistiveAccessory.category.name}"></h2>
+					</div>
 				</div>
-			</div>
-			<div class="container">
-				<div class="row">
-					<div class="card col-md-3" th:each="umpac : ${listAccessory}">
-						<img class="card-img-top" src="/image/item.png"
-							alt="Card image cap">
+				
+					<div class="card col-md-3" >
+						<img class="card-img-top" src="/image/item.png" alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title" th:text="${umpac.assistiveAccessory.name}"></h5>
 							<p class="card-text" th:text="${umpac.assistiveAccessory.description}"></p>
 							<a href="#" class="btn btn-success">Adicionar</a>
 						</div>
 					</div>
-				</div>
+				
 			</div>
 		</div>
 	</body>
