--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -5,7 +5,7 @@
         <div class="container">
             <nav th:replace="layout :: menu">(menu)</nav>
             <div class="border border-dark">
-            <form th:action="@{/register/save/(form)}" th:object="${user}" action="#" method="post">
+            <form th:action="@{/user/savenew/(form)}" th:object="${user}" action="#" method="post">
                     <input type="hidden" id="txtid" th:field="*{id}" />    
                     
                     <div class="form-group">
