--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -7,7 +7,7 @@
 	<div class="container">
 		<nav th:replace="layout :: menu">(menu)</nav>
 		<div class="border border-dark">
-			<form th:action="@{/user/(form)}" th:object="${user}" action="#"
+			<form th:action="@{/register/(form)}" th:object="${user}" action="#"
 				method="post">
 				<input type="hidden" id="txtid" th:field="*{id}" />
 				<div class="form-group">
