--- a/src/main/resources/templates/institution/form.html
+++ b/src/main/resources/templates/institution/form.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="form-group">
                         <label for="slcphone">Telefone</label>
-                        <input type="text" class="form-control" id="txtphone" placeholder="telefone">
+                        <input type="text" th:field="*{phone}" class="form-control" id="txtphone" placeholder="telefone">
                     </div>
                     <div class="form-group">
                         <label for="slcemail">Email</label>
