--- a/src/main/resources/templates/catalog/accessoryList.html
+++ b/src/main/resources/templates/catalog/accessoryList.html
@@ -18,18 +18,22 @@
 			</div>
 		</nav>
 					
-		<div class="container" th:each="umpac : ${listAccessory}">
-			<div class="row" th:if="${umpac.first}">
+		<div class="container" th:each="umitem : ${mapcategorylistAccessory}">
+			<div class="row">
 				<div class="card-banner" align="center">
-					<h2 th:text="${umpac.assistiveAccessory.category.name}"></h2>
+					<h2 th:text="${umitem.key.name}"></h2>
 				</div>
 			</div>
-			<div class="card col-md-3" >
-				<img class="card-img-top" src="/image/item.png" alt="Card image cap">
-				<div class="card-body">
-					<h5 class="card-title" th:text="${umpac.assistiveAccessory.name}"></h5>
-					<p class="card-text" th:text="${umpac.assistiveAccessory.description}"></p>
-					<a href="#" class="btn btn-success">Adicionar</a>
+			<div class="row">
+				<div class="card-columns">
+					<div class="card" th:each="umaccessory : ${umitem.value}">
+						<img class="card-img-top" src="/image/item.png" alt="Card image cap">
+						<div class="card-body">
+							<h5 class="card-title" th:text="${umaccessory.name}"></h5>
+							<p class="card-text" th:text="${umaccessory.description}"></p>
+							<a href="#" class="btn btn-success">Adicionar</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
