fiz de regra utf8 textos

--- a/src/main/resources/templates/category/form.html
+++ b/src/main/resources/templates/category/form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+    <meta charset="UTF-8"> 
     <head th:include="layout :: htmlhead"></head>
     <body>
         <div class="container">
