Correção de layout e teste de usuario

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="/report">Relat√≥rios</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="/user/new">Cadastrar</a>
+                    <a class="nav-link" href="/user/new">Cadastrar usu·rio</a>
                   </li>
                 </ul>
             </div>
