--- a/src/main/resources/templates/accessorycolor/index.html
+++ b/src/main/resources/templates/accessorycolor/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head th:include="layout :: htmlhead"></head>
+	<head th:include="layout :: htmlhead"><meta charset="UTF-8"></head>
+
     <body>
         <div class="container">
             <nav th:replace="layout :: menu">(menu)</nav>
@@ -30,13 +31,13 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">Confirmar exclusão de categoria</h5>
+                            <h5 class="modal-title">Confirmar exclusÃ£o de categoria</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">X</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p>Você tem certeza que deseja excluir a categoria?</p>
+                            <p>VocÃª tem certeza que deseja excluir a categoria?</p>
                         </div>
                         <div class="modal-footer">
                             <a href="#" class="btn btn-warning btn-lg" id="btnConf" role="button">Sim</a>
