--- a/src/main/resources/templates/category/form.html
+++ b/src/main/resources/templates/category/form.html
@@ -5,7 +5,7 @@
         <div class="container">
             <nav th:replace="layout :: menu">(menu)</nav>
             <div class="border border-dark">
-                <form th:action="@{/accessorycolor/(form)}" th:object="${accessorycolor}" action="#" method="post">
+               <form th:action="@{/category/(form)}" th:object="${category}" action="#" method="post">
                     <input type="hidden" id="txtid" th:field="*{id}" />
                    
                     <div class="form-group">
