Ajustes para adequação com a master v2

--- a/src/main/resources/templates/assistiveaccessory/index.html
+++ b/src/main/resources/templates/assistiveaccessory/index.html
@@ -15,6 +15,7 @@
                             <th scope="col">Prescrição</th>
                             <th scope="col">Função</th>
                             <th scope="col">Código</th>
+                            <th scope="col"></th>
                         </tr>
                     </thead>
                     <tbody>
