--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:fragment="htmlhead">
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}" />
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="/">Home</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="/report">Relatórios</a>
+                    <a class="nav-link" href="/assistiveaccessory">Acessórios Assistivos</a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="/city">Cidades</a>
@@ -28,6 +28,9 @@
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="/accessorycolor">Cores</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/report">Relatórios</a>
                   </li>
                 </ul>
             </div>
