--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -4,11 +4,9 @@
 <body>
 	<div class="container">
 		<nav th:replace="layout :: menu">(menu)</nav>
-		<a href="form.html" th:href="@{/order/list}" class="btn btn-primary" role="button">List</a>
-		<div class="border border-dark">
-		
-		</div>
-
+		<a href="form.html" th:href="@{/order/list}" class="btn btn-primary"
+			role="button">Lista</a>
+		<div class="border border-dark"></div>
 	</div>
-	<div th:include="layout :: footer" id="footer">(footer)</div>
 </body>
+</html>
