Ajuste no upload de imagem

--- a/src/main/resources/templates/assistiveaccessory/form.html
+++ b/src/main/resources/templates/assistiveaccessory/form.html
@@ -39,7 +39,7 @@
                     <div class="form-group assistive-accessory-group upload-img">
                         <label for="imgUpload">Imagem</label>
                         <input id="uploadedU" type="file" name="accessoryImage" onclick="onClickUpload()"/>
-                        <img id="uploadedImg" style="min-width: 50px; min-height:50px "/>
+                        <img id="uploadedImg" style="width: 400px; height:400px "/>
                     </div>
                     <button type="submit" class="btn btn-primary assistive-accessory-btn">Enviar</button>
                 </form>
