correcao cadastro de cidade e link para registro

--- a/src/main/resources/templates/catalog/accessoryList.html
+++ b/src/main/resources/templates/catalog/accessoryList.html
@@ -12,6 +12,7 @@
 					<li class="navbar-brand">Catálogo de Acessórios</li>
 				</ul>
 			</div>
+			<a class="nav-link" href="/register">Registrar Usuário</a>
 		</nav>
 
 		<div class="container">
