--- a/src/main/resources/templates/city/index.html
+++ b/src/main/resources/templates/city/index.html
@@ -30,13 +30,13 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">ConfirmaÁ„o de exclus„o</h5>
+                            <h5 class="modal-title">Confirma√ß√£o de exclus√£o</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">X</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p>Confirma a exclus„o deste registro da Cidade?</p>
+                            <p>Confirma a exclus√£o deste registro da Cidade?</p>
                         </div>
                         <div class="modal-footer">
                             <a href="#" class="btn btn-warning btn-lg" id="btnConf" role="button">Sim</a>
