--- a/src/main/resources/templates/assistiveaccessory/form.html
+++ b/src/main/resources/templates/assistiveaccessory/form.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="form-group assistive-accessory-group upload-img">
                         <label for="imgUpload">Imagem</label>
-                        <input id="uploadedU" type="file" name="accessoryImage" onclick="onClickUpload()"/>
+                        <input id="uploadeButton" type="file" name="accessoryImage"/>
                         <img id="uploadedImg" style="width: 400px; height:400px "/>
                     </div>
                     <button type="submit" class="btn btn-primary assistive-accessory-btn">Enviar</button>
