correcao testes usuario

--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -30,6 +30,7 @@
 						<td th:text="${order.institution.name}"></td>
 						<td th:text="${order.userRequest.name}"></td>
 						<td th:text="${order.user.name}"></td>
+						<td th:text="${order.itensList}"></td>
 						<td ></td>
 					</tr>
 				</tbody>
