--- a/src/main/resources/templates/assistiveaccessory/form.html
+++ b/src/main/resources/templates/assistiveaccessory/form.html
@@ -38,8 +38,8 @@
                     </div>
                     <div class="form-group assistive-accessory-group upload-img">
                         <label for="imgUpload">Imagem</label>
-                        <input id="uploadeButton" type="file" name="accessoryImage"/>
-                        <img id="uploadedImg" style="width: 400px; height:400px "/>
+                        <input id="uploadeButton" type="file" name="accessoryImage" onclick="onClickUpload()"/>
+                        <img id="uploadedImg" style="width: 400px; height:400px" th:src="${assistiveaccessory.principalPhoto.URI}"/>
                     </div>
                     <button type="submit" class="btn btn-primary assistive-accessory-btn">Enviar</button>
                 </form>
