--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -35,8 +35,11 @@
                         </select>
                     </div>
                     <div class="form-group">                    
-                    <label for="slcEnabledUser">Usuario ativo?</label><br>
-                    <input type="checkbox" name="enabled" th:field="${user.enabled}">Ativo<br>
+	                    <label for="slcEnabledUser">Usuario ativo?</label><br>
+	                    <select class="form-control" id="slcEnabledUser" th:field="*{enabled}">
+				            <option th:value="true">Sim</option>
+				            <option th:value="false">Não</option>
+				        </select>
                     </div>
                                         
                     <button type="submit" class="btn btn-primary">Enviar</button>
