Persistido várias imagens enviado

--- a/src/main/resources/templates/assistiveaccessory/form.html
+++ b/src/main/resources/templates/assistiveaccessory/form.html
@@ -60,7 +60,7 @@
 	 						</td>
 	 						<td width="45%">
 		                        <div class="input-group-btn input-group-select">
-		                        	<input id="uploadedU" type="file" name="photos['image'][]" onclick="onClickUpload()"/>
+		                        	<input id="uploadedU" type="file" name="photos[]" onclick="onClickUpload()"/>
 		                            <!-- <input type="hidden" class="input-group-select-val" name="photos['desc'][]" value=""> -->
 		                        </div>
 	                        </td>
@@ -68,7 +68,7 @@
 		                        <table style="width:100%">
 		                        	<tr>
 		                        		<td width="90%">
-		                        			<input type="text" name="photos['desc'][]" class="form-control">
+		                        			<input type="text" name="desc[]" class="form-control">
 		                        		</td>
 		                        		<td width="10%">
 					                        <span class="input-group-btn">
