--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <nav th:fragment="menu" class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">Colab</a>
+            <a class="navbar-brand" href="/admin">Admin Colab</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -16,9 +16,6 @@
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                   <li class="nav-item active">
                     <a class="nav-link" href="/">Catálogo</a>
-                  </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="/admin">Administrativo</a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="/assistiveaccessory">Acessórios</a>
@@ -41,6 +38,9 @@
                   <li class="nav-item active">
                     <a class="nav-link" href="/report">Relatórios</a>
                   </li>
+                  <form th:action="@{/logout}" method="post">
+		            <input type="submit" value="Sair" class="btn"/>
+		        </form>
                 </ul>
             </div>
         </nav>
