--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:include="layout :: htmlhead"></head>
     <body>
+    	<nav th:replace="layout :: menu">(menu)</nav>
         <div class="container">
-            <nav th:replace="layout :: menu">(menu)</nav>
             <div class="border border-dark">
             <form th:action="@{/user/(form)}" th:object="${user}" action="#" method="post">
                     <input type="hidden" id="txtid" th:field="*{id}" />    
@@ -34,6 +34,11 @@
                             <option th:each="city : ${listcity}" th:value="${city.id}" th:text="${city.name}"></option>
                         </select>
                     </div>
+                    <div class="form-group">
+					<label for="txtfone">Usuário</label> <input type="text"
+						class="form-control" id="txtfone" placeholder="Nome do seu usuário"
+						th:field="*{username}">
+					</div>
                     <div class="form-group">                    
 	                    <label for="slcEnabledUser">Usuario ativo?</label><br>
 	                    <select class="form-control" id="slcEnabledUser" th:field="*{enabled}">
