--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:include="layout :: htmlhead"></head>
     <body>
+    	<nav th:replace="layout :: menu">(menu)</nav>
         <div class="container">
-            <nav th:replace="layout :: menu">(menu)</nav>
             <a href="form.html" th:href="@{/user/new}" class="btn btn-primary" role="button">Cadastrar</a>
             <div class="border border-dark">
                 <table class="table">
@@ -24,6 +24,7 @@
                             <td th:text="${user.address}"></td>
                             <td>
                                 <a href="form.html" th:href="@{'/user/modify/' + ${user.id}}" class="btn btn-secondary btn-lg" role="button">Alterar</a>
+                                <a href="form.html" th:href="@{'/user/modifypassword/' + ${user.id}}" class="btn btn-secondary btn-lg" role="button">Alterar Senha</a>
                                 <a href="#" class="btn btn-warning btn-lg" role="button" data-toggle="modal" data-target="#confirmExclusion" th:data-id="${user.id}">Excluir</a>
                             </td>
                         </tr>
