correcao de erros e finalizacao do processo de autenticacao

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,11 +35,13 @@
 									<input type="submit" name="submit" class="btn btn-info btn-md"
 										value="submit">
 								</div>
+								<a href="/register">Criar sua conta</a>
 							</form>
 						</div>
 					</div>
 				</div>
 			</div>
+			
 		</div>
 		<div th:include="layout :: footer" id="footer">(footer)</div>
 	</body>
