correcao de diversos erros no cadastro de tamanhos

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -33,6 +33,9 @@
                     <a class="nav-link" href="/accessorycolor">Cores</a>
                   </li>
                   <li class="nav-item active">
+                    <a class="nav-link" href="/accessorysize">Tamanhos</a>
+                  </li>
+                  <li class="nav-item active">
                     <a class="nav-link" href="/institution">Instituições</a>
                   </li>
                   <li class="nav-item active">
