criacao da tela de sobre

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -43,6 +43,9 @@
                   <li class="nav-item active">
                     <a class="nav-link" href="/report">Relatórios</a>
                   </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/about">Sobre</a>
+                  </li>
                   <form th:action="@{/logout}" method="post">
 		            <input type="submit" value="Sair" class="btn"/>
 		        </form>
