--- a/src/main/resources/templates/catalog/accessoryList.html
+++ b/src/main/resources/templates/catalog/accessoryList.html
@@ -19,6 +19,7 @@
 			</div>
 			<a class="nav-link" href="/register">Registrar Usuário</a>
 			<a class="nav-link" href="/admin">Admin</a>
+			<a class="nav-link" href="/about">Sobre</a>
 			<form th:action="@{/logout}" method="post">
 		            <input type="submit" value="Sair" class="btn"/>
 		        </form>	
