implementacao da consulta e atualização do status de um pedido

--- a/src/main/resources/templates/catalog/accessoryList.html
+++ b/src/main/resources/templates/catalog/accessoryList.html
@@ -2,8 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 	<head th:include="layout :: htmlhead">
 		<meta charset="UTF-8">
+		
 	</head>
-	
+	<link type="text/css" rel="stylesheet" th:href="@{/css/accessoryList.css}" />
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<img src="/image/logoColab.jpg" class="logo">
