--- a/src/main/resources/templates/catalog/about.html
+++ b/src/main/resources/templates/catalog/about.html
@@ -3,7 +3,7 @@
 	<head th:include="layout :: htmlhead">
 		<meta charset="UTF-8">
 	</head>
-	
+	<link type="text/css" rel="stylesheet" th:href="@{/css/accessoryList.css}" />
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<img src="/image/logoColab.jpg" class="logo">
