--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,11 +4,10 @@
         <link type="text/css" rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}" />
         <link type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
         <link type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-    	<link type="text/css" rel="stylesheet" th:href="@{/css/accessoryList.css}" />
-    	<link type="text/css" rel="stylesheet" th:href="@{/css/form.assistive.accessory.css}" />
+   		<link type="text/css" rel="stylesheet" th:href="@{/css/form.assistive.accessory.css}" />
     </head>
     <body>
-
+		
         <nav th:fragment="menu" class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/admin">Admin Colab</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,6 +17,9 @@
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                   <li class="nav-item active">
                     <a class="nav-link" href="/">Catálogo</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/orderstatus">Ordens de Serviço</a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="/assistiveaccessory">Acessórios</a>
