--- a/src/main/resources/templates/orderstatus/list.html
+++ b/src/main/resources/templates/orderstatus/list.html
@@ -6,59 +6,97 @@
 		<nav th:replace="layout :: menu">(menu)</nav>
         <div class="container">
             
-            
+            <h2>Ordem de serviço pendentes</h2>
             <div class="border border-dark">
                 <table class="table">
                     <thead class="thead-light"> 
                         <tr>
-                            <th scope="col">Código do Pedido</th>
                             <th scope="col">Status</th>
                             <th scope="col">Data</th>
+                            <th scope="col">Solicitante</th>
+                            <th scope="col">Instituição</th>
+                            <th scope="col">Responsável COLAB</th>
+                            <th scope="col">Número de acessórios</th>
+                            <th scope="col"></th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr scope="row" th:each="order : ${listorder}">
-                            <td th:text="${order.id}"></td>
-                            <td th:text="${order.status}"></td>
-                            <td th:text="${order.data}"></td>
+                        <tr scope="row" th:each="order : ${listOrder}">
                             <td>
-                                <a href="form.html" th:href="@{'/user/modify/' + ${user.id}}" class="btn btn-secondary btn-lg" role="button">Alterar</a>
-                                <a href="#" class="btn btn-warning btn-lg" role="button" data-toggle="modal" data-target="#confirmExclusion" th:data-id="${order.id}">Excluir</a>
+                            <div class="progress">
+							  <div class="progress-bar" role="progressbar" th:style="'width: ' + (${order.status} * 2) + '%;'" th:aria-valuenow="${order.status}" aria-valuemin="0" aria-valuemax="50"></div>
+							</div>
+                            <ul class="list-unstyled">
+					            <li th:if="${order.status == 0}">Nova solicitação</li>
+					            <li th:if="${order.status == 10}">Em análise equipe COLAB</li>
+					            <li th:if="${order.status == 20}">Em Produção</li>
+					            <li th:if="${order.status == 30}">Pronto</li>
+					            <li th:if="${order.status == 40}">Entregue</li>
+					            <li th:if="${order.status == 50}">Finalizado</li>
+					        </ul>
+                            </td>
+                            <td th:text="${order.orderDate}"></td>
+                            <td th:text="${order.userRequest.name}"></td>
+                            <td th:text="${order.institution.name}"></td>
+                            <td th:if="${order.user != null}" th:text="${order.user.name}"></td>
+                            <td th:if="${order.user == null}"></td>
+                            
+                            <td th:text="${#lists.size(order.itensList)}"></td>
+                            
+                            <td>
+                                <a href="form.html" th:href="@{'/orderstatus/detail/' + ${order.id}}" class="btn btn-secondary btn-lg" role="button">Detalhar</a>
+                                <a href="form.html" th:href="@{'/orderstatus/change/' + ${order.id}}" class="btn btn-warning btn-lg" role="button">Atualizar Status</a>
                             </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <div class="modal fade" id="confirmExclusion" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">ConfirmaÃ§Ã£o de exclusÃ£o</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">X</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Confirmar a exclusÃ£o deste registro de Pedido?</p>
-                        </div>
-                        <div class="modal-footer">
-                            <a href="#" class="btn btn-warning btn-lg" id="btnConf" role="button">Sim</a>
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                        </div>
-                    </div>
-                </div>
+            <h2>Ordem de serviço finalizadas</h2>
+            <div class="border border-dark">
+                <table class="table">
+                    <thead class="thead-light"> 
+                        <tr>
+                            <th scope="col">Status</th>
+                            <th scope="col">Data</th>
+                            <th scope="col">Solicitante</th>
+                            <th scope="col">Instituição</th>
+                            <th scope="col">Responsável COLAB</th>
+                            <th scope="col">Número de acessórios</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr scope="row" th:each="order : ${listOrderDone}">
+                            <td>
+                            <div class="progress">
+							  <div class="progress-bar" role="progressbar" th:style="'width: ' + (${order.status} * 2) + '%;'" th:aria-valuenow="${order.status}" aria-valuemin="0" aria-valuemax="50"></div>
+							</div>
+                            <ul class="list-unstyled">
+					            <li th:if="${order.status == 0}">Nova solicitação</li>
+					            <li th:if="${order.status == 10}">Em análise equipe COLAB</li>
+					            <li th:if="${order.status == 20}">Em Produção</li>
+					            <li th:if="${order.status == 30}">Pronto</li>
+					            <li th:if="${order.status == 40}">Entregue</li>
+					            <li th:if="${order.status == 50}">Finalizado</li>
+					        </ul>
+                            </td>
+                            <td th:text="${order.orderDate}"></td>
+                            <td th:text="${order.userRequest.name}"></td>
+                            <td th:text="${order.institution.name}"></td>
+                            <td th:if="${order.user != null}" th:text="${order.user.name}"></td>
+                            <td th:if="${order.user == null}"></td>
+                            
+                            <td th:text="${#lists.size(order.itensList)}"></td>
+                            
+                            <td>
+                                <a href="form.html" th:href="@{'/orderstatus/detail/' + ${order.id}}" class="btn btn-secondary btn-lg" role="button">Detalhar</a>
+                                <a href="form.html" th:href="@{'/orderstatus/change/' + ${order.id}}" class="btn btn-warning btn-lg" role="button">Atualizar Status</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
         <div th:include="layout :: footer" id="footer">(footer)</div>
-        <script th:inline="javascript">
-          /*<![CDATA[*/
-               $('#confirmExclusion').on('show.bs.modal', function (event) {
-                  var button = $(event.relatedTarget)
-                  var recipient = button.data('id')
-                  var modal = $(this)
-                  modal.find('#btnConf').attr("href","/order/remove/" + recipient)
-                })
-           /*]]>*/
-        </script> 
     </body>
 </html>
