--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -56,6 +56,11 @@
 						class="form-control" id="txtfone" placeholder="Senha"
 						th:field="*{password}">
 				</div>
+				<div class="form-group">
+					<label for="txtcrmCrefito">CRM / CREFITO</label> <input type="text" required
+						class="form-control" id="txtcrmCrefito" placeholder="Número"
+						th:field="*{crmCrefito}">
+				</div>
 				<button type="submit" class="btn btn-primary">Enviar</button>
 			</form>
 		</div>
