--- a/src/main/resources/templates/assistiveaccessory/form.html
+++ b/src/main/resources/templates/assistiveaccessory/form.html
@@ -29,6 +29,14 @@
                         <label for="txtcode">Código</label>
                         <input type="text" class="form-control" id="txtcode" placeholder="Insere o código do acessório assistivo" th:field="*{code}">
                     </div>
+                    <div class="form-group assistive-accessory-group">
+                        <label for="txtprintTime">Tempo de impressão</label>
+                        <input type="text" class="form-control" id="txtprintTime" placeholder="" th:field="*{printTime}">
+                    </div>
+                    <div class="form-group assistive-accessory-group">
+                        <label for="txtamountOfInput">Quantidade de Insumo</label>
+                        <input type="text" class="form-control" id="txtamountOfInput" placeholder="" th:field="*{amountOfInput}">
+                    </div>
                     <div class="form-group">
                         <label for="slccategory">Categoria</label>
                         <select class="form-control" id="slccategory" th:field="*{category}">
