adicionando crud material

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -16,13 +16,13 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                   <li class="nav-item active">
-                    <a class="nav-link" href="/">Catálogo</a>
+                    <a class="nav-link" href="/">Catalogo</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="/orderstatus">Ordens de Serviço</a>
+                    <a class="nav-link" href="/orderstatus">Ordens de Servico</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="/assistiveaccessory">Acessórios</a>
+                    <a class="nav-link" href="/assistiveaccessory">Acessorios</a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="/city">Cidades</a>
@@ -37,13 +37,16 @@
                     <a class="nav-link" href="/accessorysize">Tamanhos</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="/institution">Instituições</a>
+                    <a class="nav-link" href="/institution">Instituicoes</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="/user">Usuários</a>
+                    <a class="nav-link" href="/user">Usuarios</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="/report">Relatórios</a>
+                    <a class="nav-link" href="/material">Material</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/report">Relatorios</a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="/about">Sobre</a>
